--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link type="text/css" rel="stylesheet"
 	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
+      @media (min-width: 980px) {
+      body {
+      padding-top: 60px;
+      }
       body {
       padding-top: 20px:
       padding-bottom: 40px;
@@ -44,18 +48,26 @@
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+  <div class="navbar navbar-inverse navbar-fixed-top">    
+   <dive class="navbar-inner">
     <div class="container">
-      <div class="row navigation">
-	<div class="span2 logo">
-	  Logo
-	  </div>
-	<div class="span6 blank">
-	  Blank
-	  </div>
-	<div class="span4 about">
-	  About
-	  </div>
-	</div>
+         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
