--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <style type="text/css">
       @media (min-width: 980px) {
       body {
@@ -114,10 +115,6 @@
 	    </div>
 	  </div>
 	</div>
-
- <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-
 
       </body>
   </html>
