--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
          line-height: 24px;
       }
 
+/*Video pitch and Action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .social, .statistics {
+        text-align: center;
+      }
+      .statistics h3, .statistics p {
+        color: white;
+      }
 
+ 
       body {
       padding-top: 20px:
       padding-bottom: 40px;
@@ -96,8 +114,8 @@
 	    </div>
 	  </div>
 	<div class="row-fluid pitch">
-	  <div class="span6 video">
-	    Video
+	  <div class="span5 offset1 video">
+	    <img class="img-polaroid" src="http://placehold.it/480x300">
 	    </div>
 	  <div class="span6">
 	    <div class="thermometer">
