--- a/index.html
+++ b/index.html
@@ -59,52 +59,44 @@
          line-height: 24px;
       }
 
-/*Video pitch and Action */
-      .pitch {
-        padding: 2.5% 0%;
+      /* Video pitch and Action */
+        .pitch {
+          padding: 2.5% 0%;
       }
-      .order {
-        padding: 2% 0%;
+        .order {
+          padding: 2% 0%;
       }
-      .actions {
-        background-color: #343434;
-        padding: 3% 0%;
+        .actions {
+          background-color: #343434;
+          padding: 3% 0%;
       }
-      .video, .thermometer, .social, .statistics {
-        text-align: center;
+        .video, .thermometer, .social, .statistics {
+          text-align: center;
       }
-      .statistics h3, .statistics p {
-        color: white;
+        .statistics h3, .statistics p {
+          color: white;
       }
 
- 
-      body {
-      padding-top: 20px:
-      padding-bottom: 40px;
+      /* Marketing Copy and Footer */
+      .copy {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
       }
-      p.lead {
-      padding-top: 15px;
+      .asset {
+        padding: 2.5% 0%;
       }
-/*      .navigation, .pitch, .section1, .section2, .faq, .footer {
-      padding: 10px 0px 10px 0px;
-      } */
-      .video, .thermometer, .order, .social {
-      border: 1px dotted;
-      text-align: center;
+      .footer {
+        color: #cccccc;
+        text-align: center;
       }
-      .video {
-      /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-      height: 124px;
-      line-height: 124px;
+      .footer p {
+        font-size: 11px;
       }
-      .thermometer, .order, .social {
-      /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-      height: 40px;
-      line-height: 40px;
+      .footer a {
+        color: #ccccff;
       }
-      div.row{
-      border: 1px solid;
-      }
+
     </style>
   </head>
   <body>
@@ -181,15 +173,28 @@
 	    </div>
 	  </div>
 	<div class="row-fluid section1">
-	  <div class="span12">
-	    Marketing Section 1
+	  <div class="span5 offset1 asset">
+	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	    </div>
+	  <div class="span5 copy">
+	    <p>
+	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tellus tellus, molestie ut tempor vitae, porttitor id tortor. Nulla volutpat, eros sit amet venenatis tempor, augue nisl convallis ipsum, eu lobortis lacus quam vitae nisi. Pellentesque metus nulla, porta sit amet augue nec, facilisis tempus urna. Mauris in ligula sit amet mauris tempus imperdiet quis in purus. Fusce tristique orci sollicitudin, dignissim tortor ac, dignissim lacus. Sed placerat iaculis pellentesque. Donec sed consectetur turpis.
+	      </p>
 	    </div>
 	  </div>
+
 	<div class="row-fluid section2">
-	  <div class="span12">
-	    Marketing Section 2
+	  <div class="span5 offset1 copy copy-right">
+	    <p>
+	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tellus tellus, molestie ut tempor vitae, porttitor id tortor. Nulla volutpat, eros sit amet venenatis tempor, augue nisl convallis ipsum, eu lobortis lacus quam vitae nisi. Pellentesque metus nulla, porta sit amet augue nec, facilisis tempus urna. Mauris in ligula sit amet mauris tempus imperdiet quis in purus. Fusce tristique orci sollicitudin, dignissim tortor ac, dignissim lacus. Sed placerat iaculis pellentesque. Donec sed consectetur turpis.
+	      </p>
+	    </div>
+	  <div class="span5 asset">
+	    <img class="img-polaroid" src="http://placehold.it/480x300">
 	    </div>
 	  </div>
+
+
 	<div class="row-fluid faq">
 	  <div class="span12">
 	    FAQ
