--- a/index.html
+++ b/index.html
@@ -196,18 +196,35 @@
 
 
 	<div class="row-fluid faq">
-	  <div class="span12">
-	    FAQ
+	  <div class="span10 offset1">
+	    <h3>FAQ</h3>
+	    <div class="accordion" id="accordion2">
+	      <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse"
+		   data-parent="#accordion-toggle" href="#collapseOne">
+		  What does FAQ stand for?
+		  </a>
+		</div>
+	      <div id="collapseTwo" class="accordion-body collapse">
+		<div class="accordion-inner">
+		  A question which is commonly asked by users.
 	    </div>
-
+	</div>
+	</div>
+	</div>
+	</div>
+  
 	  </div>
+
 	<div class="row-fluid footer">
 	  <div class="span12">
-	    Footer
+	    <p> This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+		By-SA 3.0
+		</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
 	    </div>
 	    </div>
 	  </div>
-	</div>
+
 
       </body>
   </html>
