--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </head>
   <body>
   <div class="navbar navbar-inverse navbar-fixed-top">    
-   <dive class="navbar-inner">
+   <div class="navbar-inner">
     <div class="container">
          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
