--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           background-color: #343434;
           padding: 3% 0%;
       }
-        .video, .thermometer, .social, .statistics {
+        .video, .thermometer, .order, .social, .statistics {
           text-align: center;
       }
         .statistics h3, .statistics p {
@@ -199,12 +199,26 @@
 	  <div class="span10 offset1">
 	    <h3>FAQ</h3>
 	    <div class="accordion" id="accordion2">
+	      <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion-toggle" href="#collapseOne">
 		  What does FAQ stand for?
 		  </a>
 		</div>
+	      <div id="collapseOne" class="accordion-body collapse">
+		<div class="accordion-inner">
+		  Frequently Asked Question.
+		  </div>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-togggle="collapse"
+		     data-parent="#accordion2" href="#collapseTwo">
+		    What's a Frequently Asked Question?
+		    </a>
+		  </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
 		  A question which is commonly asked by users.
