--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	      </div>
 	    </div>
-	    <div class="span6 offset4 order">
+	    <div class="span6 offset3 order">
 	      <button class="btn btn-success btn-large">Preorder</button>
 	      </div>
 	    <div class="span8 offset2 social">
@@ -229,7 +229,7 @@
 	</div>
   
 	  </div>
-
+	</div>
 	<div class="row-fluid footer">
 	  <div class="span12">
 	    <p> This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
