--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 	      <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
-		   data-parent="#accordion-toggle" href="#collapseOne">
+		   data-parent="#accordion2" href="#collapseOne">
 		  What does FAQ stand for?
 		  </a>
 		</div>
