--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		    What's a Frequently Asked Question?
 		    </a>
 		  </div>
-	      <div id="collapseTwo" class="accordion-body collapse">
+	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
 		  A question which is commonly asked by users.
 	    </div>
