Hw4 Part2, Title, description, target

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Unpinned</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -123,12 +123,12 @@
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Bitstarter Title</h1>
+	  <h1>$1,000 + 1,000 social plugs = Unpinned Launch!</h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">This is my first bitstarter project.</p>
+	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects via video chat.</p>
 	    </div>
 	  </div>
 	<div class="row-fluid pitch">
@@ -141,17 +141,17 @@
 	      <div class="statistics">
 		<div class="span4">
 		  <div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
 		<div class="span4">
 		  <div class="linediv-c">
-		    <h3>$6000</h3> <p>of $10,000</p>
+		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
 		  </div>
 		<div class="span4">
 		  <div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>30</h3> <p>days left</p>
 		  </div>
 		 </div> 
 		</div>
