--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>$1,000 + 1,000 social plugs = Unpinned Launch!</h1>
+	  <h1>$1,000 + 100 sign ups = Unpinned Launch!</h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
@@ -137,19 +137,24 @@
 	    </div>
 
 	  <div class="span5 actions">
-	    <div class="span8 offset2">
+	    <div class="span12">
 	      <div class="statistics">
-		<div class="span4">
+		<div class="span3">
 		  <div class="linediv-l">
 		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
-		<div class="span4">
+		<div class="span3">
 		  <div class="linediv-c">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
 		  </div>
-		<div class="span4">
+		<div class="span3">
+		  <div class="lindediv-c">
+		    <h3>0</h3> <p>of 100 sign ups</p>
+		    </div>
+		  </div>
+		<div class="span3">
 		  <div class="linediv-r">
 		  <h3>30</h3> <p>days left</p>
 		  </div>
