--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		    </div>
 		  </div>
 		<div class="span3">
-		  <div class="lindediv-c">
+		  <div class="lindediv-l">
 		    <h3>0</h3> <p>of 100 sign ups</p>
 		    </div>
 		  </div>
