statistics linediv edit

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
 		  </div>
 		 </div>
 		<div class="span3">
-		  <div class="linediv-c">
+		  <div class="linediv-l">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
 		  </div>
 		<div class="span3">
-		  <div class="lindediv-l">
+		  <div class="lindediv-c">
 		    <h3>0</h3> <p>of 100 sign ups</p>
 		    </div>
 		  </div>
