--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
 	    </div>
 	  <div class="span5 copy">
 	    <p>
-	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tellus tellus, molestie ut tempor vitae, porttitor id tortor. Nulla volutpat, eros sit amet venenatis tempor, augue nisl convallis ipsum, eu lobortis lacus quam vitae nisi. Pellentesque metus nulla, porta sit amet augue nec, facilisis tempus urna. Mauris in ligula sit amet mauris tempus imperdiet quis in purus. Fusce tristique orci sollicitudin, dignissim tortor ac, dignissim lacus. Sed placerat iaculis pellentesque. Donec sed consectetur turpis.
+	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  doing and making things that bring you and others happiness, and sharing those experiences with others.  
+
+Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them all the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
+
+Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. Whatever it is, get unpinned! 
 	      </p>
 	    </div>
 	  </div>
@@ -191,7 +195,11 @@
 	<div class="row-fluid section2">
 	  <div class="span5 offset1 copy copy-right">
 	    <p>
-	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tellus tellus, molestie ut tempor vitae, porttitor id tortor. Nulla volutpat, eros sit amet venenatis tempor, augue nisl convallis ipsum, eu lobortis lacus quam vitae nisi. Pellentesque metus nulla, porta sit amet augue nec, facilisis tempus urna. Mauris in ligula sit amet mauris tempus imperdiet quis in purus. Fusce tristique orci sollicitudin, dignissim tortor ac, dignissim lacus. Sed placerat iaculis pellentesque. Donec sed consectetur turpis.
+Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just around the corner that you can learn, do, and share with.
+
+The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
+
+Tell your friends and their  friends' friends!  Lets make this happen!     
 	      </p>
 	    </div>
 	  <div class="span5 asset">
