--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects via video chat.</p>
+	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects over video chat.</p>
 	    </div>
 	  </div>
 	<div class="row-fluid pitch">
@@ -169,7 +169,7 @@
 	      </div>
 	    </div>
 	    <div class="span6 offset3 order">
-	      <button class="btn btn-success btn-large">Preorder</button>
+	      <button class="btn btn-success btn-large">Pledge</button>
 	      </div>
 	    <div class="span8 offset2 social">
 	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
@@ -216,12 +216,12 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  Where will the business be based out of?
 		  </a>
 		</div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  Even though we're currently living in Sydney, the business will be incorporated in the US and eventually headquartered in whatever city we move back to.
 		  </div>
 		</div>
 	      </div>
