Edited paragrah one in index.html

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 	    </div>
 	  <div class="span5 copy">
 	    <p>
-	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  doing and making things that bring you and others happiness, and sharing those experiences with others.  
+	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  make and do things that bring you and others happiness, and share those experiences with others.  
 
 Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them all the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
 
