testing different layouts

--- a/index.html
+++ b/index.html
@@ -131,20 +131,23 @@
 	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects over video chat.</p>
 	    </div>
 	  </div>
+	</div>
+      
+      <div class="container-fluid">
 	<div class="row-fluid pitch">
-	  <div class="span5 offset1 video">
+	  <div class="span8 offset1 video">
 	    <img class="img-polaroid" src="http://placehold.it/480x300">
 	    </div>
 
-	  <div class="span5 actions">
-	    <div class="span12">
+	  <div class="span2 actions">
+	    <div class="span2">
 	      <div class="statistics">
 		<div class="span3">
 		  <div class="linediv-l">
 		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
-		<div class="span3">
+		<div class="span2">
 		  <div class="linediv-l">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
