--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
 
-      /* Large desktop */
+      /* Large desktop */ 
       @media (min-width: 980px) {
         body {
           padding-top: 60px;
       }
         .linediv-l {
-          border-right: 1px white solid;
+          border-bottom: 1px white solid;
       }
         .linediv-r {
-          border-left: 1px white solid;
+          border-right: 1px white solid;
       }
-     }
+     } 
 
       /* Landscape phones and down */
       @media (max-width: 480px) {
@@ -135,19 +135,19 @@
       
       <div class="container-fluid">
 	<div class="row-fluid pitch">
-	  <div class="span8 offset1 video">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <div class="span7 offset1 video">
+	    <img class="img-polaroid" src="http://placehold.it/6000x400">
 	    </div>
 
-	  <div class="span2 actions">
-	    <div class="span2">
+	  <div class="span3 actions">
+	    <div class="span3">
 	      <div class="statistics">
 		<div class="span3">
 		  <div class="linediv-l">
 		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
-		<div class="span2">
+		<div class="span3">
 		  <div class="linediv-l">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
