testing a two column page1

--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
       <div class="container-fluid">
 	<div class="row-fluid pitch">
 	  <div class="span7 offset1 video">
-	    <img class="img-polaroid" src="http://placehold.it/6000x400">
+	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
 	  <div class="span3 actions">
-	    <div class="span3">
+	    <div class="span12">
 	      <div class="statistics">
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-l">
 		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-l">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
 		  </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="lindediv-c">
 		    <h3>0</h3> <p>of 100 sign ups</p>
 		    </div>
 		  </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-r">
 		  <h3>30</h3> <p>days left</p>
 		  </div>
