--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           border-bottom: 1px white solid;
       }
         .linediv-r {
-          border-right: 1px white solid;
+          border-top: 1px white solid;
       }
      } 
 
@@ -174,8 +174,10 @@
 	    <div class="span6 offset3 order">
 	      <button class="btn btn-success btn-large">Pledge</button>
 	      </div>
-	    <div class="span8 offset2 social">
+	    <div class="span6 offset3 social">
 	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	      </div>
+	    <div class="span6 offset3 social">
 	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	      </div>
 	    </div>
