--- a/index.html
+++ b/index.html
@@ -137,8 +137,21 @@
 	<div class="row-fluid pitch">
 	  <div class="span7 offset1 video">
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
-	    </div>
+	 <div class="row-fluid section1">
+	    <div class="span7 offset1 copy">
+	    <p>
+	      Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
+y life,  make and do things that bring you and others happiness, and share those experiences with others.
 
+Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them a\
+ll the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
+
+Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. W\
+hatever it is, get unpinned!
+              </p>
+          </div>
+	  </div>
+	 </div>
 	  <div class="span3 actions">
 	    <div class="span12">
 	      <div class="statistics">
@@ -174,19 +187,17 @@
 	    <div class="span6 offset3 order">
 	      <button class="btn btn-success btn-large">Pledge</button>
 	      </div>
-	    <div class="span6 offset3 social">
+	    <div class="span12 social">
 	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      </div>
-	    <div class="span6 offset3 social">
 	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	      </div>
 	    </div>
 	  </div>
 	<div class="row-fluid section1">
-	  <div class="span5 offset1 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <div class="span7 offset1 asset">
+	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
-	  <div class="span5 copy">
+	  <div class="span7 offset1 copy">
 	    <p>
 	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  make and do things that bring you and others happiness, and share those experiences with others.  
 
