--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
       
       <div class="container-fluid">
 	<div class="row-fluid pitch">
-	  <div class="span7 offset1 video">
+	  <div class="span7 offset1">
+	    <div class="video">
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
-	 <div class="row-fluid section1">
-	    <div class="span7 offset1 copy">
+	    </div>
+	   <div class="copy">
 	    <p>
 	      Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
 y life,  make and do things that bring you and others happiness, and share those experiences with others.
@@ -149,9 +150,28 @@ ll the time.  Plus, sharing in the enjoyment of doing this with new and old frie
 Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. W\
 hatever it is, get unpinned!
               </p>
-          </div>
+	    </div>
+	   <div class="asset">
+            <img class="img-polaroid" src="http://placehold.it/600x400">
+	    </div>
+
+          <div class="copy">
+            <p>
+Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just aro\
+und the corner that you can learn, do, and share with.
+
+The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch\
+ ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
+
+Tell your friends and their  friends' friends!  Lets make this happen!
+              </p>
+	    </div>
+	    <div class="asset">
+	      <img class="img-polaroid" src="http://placehold.it/600x400">
+	      </div>
 	  </div>
-	 </div>
+
+
 	  <div class="span3 actions">
 	    <div class="span12">
 	      <div class="statistics">
@@ -193,35 +213,9 @@ hatever it is, get unpinned!
 	      </div>
 	    </div>
 	  </div>
-	<div class="row-fluid section1">
-	  <div class="span7 offset1 asset">
-	    <img class="img-polaroid" src="http://placehold.it/600x400">
-	    </div>
-	  <div class="span7 offset1 copy">
-	    <p>
-	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  make and do things that bring you and others happiness, and share those experiences with others.  
 
-Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them all the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
 
-Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. Whatever it is, get unpinned! 
-	      </p>
-	    </div>
-	  </div>
 
-	<div class="row-fluid section2">
-	  <div class="span5 offset1 copy copy-right">
-	    <p>
-Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just around the corner that you can learn, do, and share with.
-
-The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
-
-Tell your friends and their  friends' friends!  Lets make this happen!     
-	      </p>
-	    </div>
-	  <div class="span5 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
-	    </div>
-	  </div>
 
 
 	<div class="row-fluid faq">
