--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          line-height: 24px;
       }
 
-      /* Video pitch and Action */
+      /* Video pitch, Action and Rewards */
         .pitch {
           padding: 2.5% 0%;
       }
@@ -70,7 +70,11 @@
           background-color: #343434;
           padding: 3% 0%;
       }
-        .video, .thermometer, .order, .social, .statistics {
+        .rewards {
+          background-color: #aaaaaa;
+          padding: 3% 0%; 
+      }
+        .video, .thermometer, .prizes, .order, .social, .statistics {
           text-align: center;
       }
         .statistics h3, .statistics p {
@@ -85,6 +89,7 @@
       }
       .asset {
         padding: 2.5% 0%;
+        text-align: center;
       }
       .footer {
         color: #cccccc;
@@ -140,6 +145,7 @@
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 	   <div class="copy">
+	     <div class="span10 offset1">
 	    <p>
 	      Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
 y life,  make and do things that bring you and others happiness, and share those experiences with others.
@@ -151,12 +157,14 @@ Create and share the DIY projects that you've been admiring from afar.  Teach ot
 hatever it is, get unpinned!
               </p>
 	    </div>
+	    </div>
 	   <div class="asset">
             <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
           <div class="copy">
-            <p>
+            <div class="span10 offset1">
+	    <p>
 Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just aro\
 und the corner that you can learn, do, and share with.
 
@@ -165,6 +173,7 @@ The goal is to launch the site in thirty days, starting with at least 100 users.
 
 Tell your friends and their  friends' friends!  Lets make this happen!
               </p>
+	    </div>
 	    </div>
 	    <div class="asset">
 	      <img class="img-polaroid" src="http://placehold.it/600x400">
@@ -211,10 +220,69 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	      </div>
-	    </div>
 	  </div>
 
-
+	  <div class="span3 rewards">
+	    <div class="span12">
+	      <div class="prizes">
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $1 or more</h4>
+		    <p>We'll thank you by name on our website</p>  
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Social Plug</h4>
+		    <p>We give you a personal shout-out on our social networks</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Sign-Up</h4>
+		    <p>Be one of the first 100 to sign up and you'll be invited to the first 1,000 User Party</p>
+		    </div>   
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4> Pledge $5 or more</h4>
+		    <p> Reward</p>
+		    </div>
+		    </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $10 or more</h4>
+		    <p>Reward xyz</p>
+		  </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $15 or more</h4>
+		    <p>Reward</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $25 or more</h4>
+		    <p>A featured blog post on how wonderful you are</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $50 or more</h4>
+		    <p>We'll make and mail you a personalized, handmade gift</p> 
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $100 or more</h4>
+		    <p>We'll name something on the site after you</p>
+		    </div>
+		  </div>
+		
+		</div>
+	      </div>
+	   </div> 
 
 
 
