updates to test.html

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Unpinned</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -120,6 +120,24 @@
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
+	    <ul class="nav pull-right">
+	      <li class="dropdown">
+		<a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In</a>
+		<div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+		  <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
+  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" placeholder="Username"/>
+  <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" placeholder="Password"/>
+  <span class="help-block"><a href="#" class="text-error"><small>Forgot Password?</small></a></span>
+  <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
+  <label class="string optional" for="user_remember_me"> Remember me</label>
+
+  <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+  <a href="_account.html">Create an Account</a>
+</form>
+                </li>
+                </ul> 
+
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -128,7 +146,7 @@
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>$1,000 + 100 sign ups = Unpinned Launch!</h1>
+	  <h1>Welcome to Unpinned!</h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
@@ -144,39 +162,13 @@
 	    <div class="video">
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
-	   <div class="copy">
-	     <div class="span10 offset1">
-	    <p>
-	      Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
-y life,  make and do things that bring you and others happiness, and share those experiences with others.
 
-Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them a\
-ll the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
-
-Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. W\
-hatever it is, get unpinned!
-              </p>
-	    </div>
-	    </div>
 	   <div class="asset">
-            <img class="img-polaroid" src="http://placehold.it/600x400">
+            <img class="img-polaroid" src="http://placehold.it/600x200">
 	    </div>
 
-          <div class="copy">
-            <div class="span10 offset1">
-	    <p>
-Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just aro\
-und the corner that you can learn, do, and share with.
-
-The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch\
- ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
-
-Tell your friends and their  friends' friends!  Lets make this happen!
-              </p>
-	    </div>
-	    </div>
 	    <div class="asset">
-	      <img class="img-polaroid" src="http://placehold.it/600x400">
+	      <img class="img-polaroid" src="http://placehold.it/600x20">
 	      </div>
 	  </div>
 
@@ -185,41 +177,25 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	    <div class="span12">
 	      <div class="statistics">
 		<div class="span10 offset1">
-		  <div class="linediv-l">
-		  <h3>0</h3> <p>backers</p>
-		  </div>
+		  <h3>Create a how-to-torial</h3>
+		  <button class="btn btn-success btn-large">Create</button>
 		 </div>
 		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h3>$0</h3> <p>of $1,000</p>
+		    <h3>Invite Friends</h3>
 		    </div>
-		  </div>
+		  <div class="span12 social">
+              <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+              <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+              </div>
 		<div class="span10 offset1">
-		  <div class="lindediv-c">
-		    <h3>0</h3> <p>of 100 sign ups</p>
+		    <h3>Request a DIY Project</h3>
+		    <button class="btn btn-success btn-large">Request</button>
 		    </div>
-		  </div>
 		<div class="span10 offset1">
-		  <div class="linediv-r">
-		  <h3>30</h3> <p>days left</p>
-		  </div>
 		 </div> 
 		</div>
 	      </div>
 
-	  <div class="span10 offset1"> 
-	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
-	      </div>
-	    </div>
-	    <div class="span6 offset3 order">
-	      <button class="btn btn-success btn-large">Pledge</button>
-	      </div>
-	    <div class="span12 social">
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-	      </div>
 	  </div>
 
 	  <div class="span3 rewards">
