--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Unpinned</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Roboto|Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
@@ -39,14 +40,45 @@
       }
      }
 
+      .navbar-inner, .navbar .btn-navbar {
+      background: #006e2e; /* Old browsers */
+background: -moz-linear-gradient(top, #006e2e 0%, #006e2e 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#006e2e), color-stop(100%,#006e2e)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* IE10+ */
+background: linear-gradient(to bottom, #006e2e 0%,#006e2e 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', endColorstr='#006e2e',GradientType=0 ); /* IE6-9 */
+      }
+
+      .navbar .nav .active > a, .navbar .nav .active > a:hover {
+         background-color: #006633;
+      }
+      
+      .navbar .nav > li > a {
+         color: #669966;
+         text-decoration: none;
+         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      .navbar-fixed-top .brand {
+        color: #F0F0F0;
+        text-decoration: none;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      .navbar .nav > li > a:hover {color:white;}
+
+      .navbar .nav .active > a, .navbar .nav .active > a:hover {color:white;}
+
       /* All form factors */
 
       /* Main body and headings */
         body{
-         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+         font-family: 'Roboto', sans-serif;
       }
       .heading, .subheading {
-         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+         font-family: 'Oxygen', sans-serif;
           text-align: center;
       }
       p.lead {
@@ -67,7 +99,7 @@
           padding: 2% 0%;
       }
         .actions {
-          background-color: #343434;
+          background-color: #404040;
           padding: 3% 0%;
       }
         .rewards {
@@ -77,8 +109,13 @@
         .video, .thermometer, .prizes, .order, .social, .statistics {
           text-align: center;
       }
-        .statistics h3, .statistics p {
+        .statistics h4, .statistics p {
           color: white;
+      }
+
+        .heading h1 {
+          color: #006e2e;
+          font-size: 50px;
       }
 
       /* Marketing Copy and Footer */
@@ -105,7 +142,7 @@
     </style>
   </head>
   <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">    
+  <div class="navbar navbar-fixed-top">    
    <div class="navbar-inner">
     <div class="container">
          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -151,7 +188,7 @@
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects over video chat.</p>
+	    <p class="lead">An online community to learn, do and share DIY projects over video chat.</p>
 	    </div>
 	  </div>
 	</div>
@@ -168,7 +205,7 @@
 	    </div>
 
 	    <div class="asset">
-	      <img class="img-polaroid" src="http://placehold.it/600x20">
+	      <img class="img-polaroid" src="http://placehold.it/600x200">
 	      </div>
 	  </div>
 
@@ -177,22 +214,20 @@
 	    <div class="span12">
 	      <div class="statistics">
 		<div class="span10 offset1">
-		  <h3>Create a how-to-torial</h3>
+		  <h4>Create a how-to-torial!</h4>
 		  <button class="btn btn-success btn-large">Create</button>
 		 </div>
-		<div class="span10 offset1">
-		    <h3>Invite Friends</h3>
-		    </div>
+		 <div class="span10 offset1">
+                    <h4>Request a DIY Project</h4>
+                    <button class="btn btn-success btn-large">Request</button>
+                    </div>
+		  <div class="span10 offset1">
+                    <h4>Invite Friends</h4>
+                    </div>
 		  <div class="span12 social">
               <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
               <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
               </div>
-		<div class="span10 offset1">
-		    <h3>Request a DIY Project</h3>
-		    <button class="btn btn-success btn-large">Request</button>
-		    </div>
-		<div class="span10 offset1">
-		 </div> 
 		</div>
 	      </div>
 
