Added a note to make a change

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	   <div class="copy">
 	     <div class="span10 offset1">
 	    <p>
-	      Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
+	      CHANGETHIS Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
 y life,  make and do things that bring you and others happiness, and share those experiences with others.
 
 Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them a\
