--- a/index.html
+++ b/index.html
@@ -108,7 +108,22 @@
   margin: 0 auto;
  }
 
-    </style>
+   </style>
+
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-42987447-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
   </head>
   <body>
   <div class="navbar navbar-inverse navbar-fixed-top">    
@@ -222,7 +237,7 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	    <div class="span6 offset3 order">
 	      <button class="btn btn-success btn-large">Pledge</button>
 	      </div>
-	    <div class="span8 offset2 social">
+	    <div class="span12 social">
 	      <!-- AddThis Button BEGIN -->
 	      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 		<a class="addthis_button_preferred_1"></a>
@@ -348,6 +363,17 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	    </div>
 	  </div>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42987447-1', 'herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 
       </body>
   </html>
