Edited vc to video chat in one sentence description

--- a/test.html
+++ b/test.html
@@ -188,7 +188,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">An online community to learn, do and share DIY projects over vc.</p>
+	    <p class="lead">An online community to learn, do and share DIY projects over video chat.</p>
 	    </div>
 	  </div>
 	</div>
