fixed error with sign in and date/time picker, removed date/time picker

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-    <style type="text/css">
+    <style type="text/css"> 
 
       /* Large desktop */
       @media (min-width: 980px) {
@@ -163,7 +163,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
             </ul>
 	    <ul class="nav pull-right">
 	      <li class="dropdown">
-		<a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In</a>
+		<a class="dropdown-toggle" href="#signIn" data-toggle="dropdown">Sign In</a>
 		<div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
 		  <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
   <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" placeholder="Username"/>
@@ -221,9 +221,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		  <h4>Create a how-to-torial!</h4>
 
 		  <!-- Button to trigger Modal -->
-		  <a href="#myModal" role="button" class="btn btn-success btn-large" data-toggle="modal">Create</a>
+		  <a href="#myModal1" role="button" class="btn btn-success btn-large" data-toggle="modal">Create</a>
 		  <!--Modal-->
-		  <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div id="myModal1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		    <div class="modal-header">
 		      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
 		      <h3 id="myModalLabel">Create a to-torial, its easy!</h3>
@@ -308,33 +308,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		    <div class="span12">
 		      <p class="lead">Second, schedule & invite others.</p></div>
 		    Select a date and time for your to-torial.
-		    <!-- Date/Time picker --> 
-		    <div id="datetimepicker" class="input-append date">
-		      <input type="text"></input>
-		      <span class="add-on">
-			<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-		      </span>
 		    </div>
-		    </div>
-
-		    <script type="text/javascript"
-			    src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js">
-		    </script> 
-		    <script type="text/javascript"
-			    src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
-		    </script>
-		    <script type="text/javascript"
-			    src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js">
-		    </script>
-		    <script type="text/javascript"
-			    src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.pt-BR.js">
-		    </script>
-		    <script type="text/javascript">
-		      $('#datetimepicker').datetimepicker({
-		      format: 'dd/MM/yyyy hh:mm:ss',
-		      language: 'en'
-		      });
-		    </script>
 		    <!-- AddThis Button BEGIN -->
 		    <div class="row-fluid">
 		      <div class="span6 offset4">
@@ -360,7 +334,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		      <button class="btn" data-dismiss="modal" aria-hidden="true">Save</button>
 		      <button class="btn btn-primary">Post</button>
 		      </div>
-		    </div>
+		    </div>-->
 		 </div>
 		 <div class="span10 offset1">
                     <h4>Request a DIY Project</h4>
