Changed actions background to white and moved text into buttons

--- a/test.html
+++ b/test.html
@@ -99,9 +99,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
           padding: 2% 0%;
       }
         .actions {
-          background-color: #404040;
+          background-color: white;
           padding: 3% 0%;
       }
+        .actionsBtn {
+          margin: 5px;
+}
+
         .rewards {
           background-color: #aaaaaa;
           padding: 3% 0%; 
@@ -217,11 +221,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 	  <div class="span3 actions">
 	    <div class="span12">
 	      <div class="statistics">
-		<div class="span10 offset1">
-		  <h4>Create a how-to-torial!</h4>
+		<div class="span10 offset1 actionsBtn">
 
 		  <!-- Button to trigger Modal -->
-		  <a href="#myModal1" role="button" class="btn btn-success btn-large" data-toggle="modal">Create</a>
+		  <a href="#myModal1" role="button" class="btn btn-success btn-large" data-toggle="modal">Create a to-torial</a>
 		  <!--Modal-->
 		  <div id="myModal1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		    <div class="modal-header">
@@ -334,12 +337,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		      <button class="btn" data-dismiss="modal" aria-hidden="true">Save</button>
 		      <button class="btn btn-primary">Post</button>
 		      </div>
-		    </div>-->
+		    </div>
 		 </div>
-		 <div class="span10 offset1">
-                    <h4>Request a DIY Project</h4>
+		 <div class="span10 offset1 actionsBtn">
 		    <!-- Button to trigger modal -->
-		    <a href="#myModal2" role="button" class="btn btn-success btn-large" data-toggle="modal">Request</a>
+		    <a href="#myModal2" role="button" class="btn btn-success btn-large" data-toggle="modal">Request a to-torial</a>
 
 		    <!-- Modal -->
 		    <div id="myModal2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
@@ -358,10 +360,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		      </div>
 
                     </div>
-		  <div class="span10 offset1">
-                    <h4>Invite Friends</h4>
-                    </div>
-		  <div class="span12 social">
+		  <div class="span12 social actionsBtn">
 
 		    <!-- AddThis Button BEGIN -->
 		    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
