New layout with 2 columns beneath video

--- a/test.html
+++ b/test.html
@@ -196,7 +196,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">An online community to learn, do and share DIY projects over video chat.</p>
+	    <p class="lead"> The place to learn, do and share DIY projects through video chat.</p>
 	    </div>
 	  </div>
 	</div>
@@ -208,13 +208,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
-	   <div class="asset">
+<!--	   <div class="asset">
             <img class="img-polaroid" src="http://placehold.it/600x200">
 	    </div>
 
 	    <div class="asset">
 	      <img class="img-polaroid" src="http://placehold.it/600x200">
-	      </div>
+	      </div> -->
 	  </div>
 
 
@@ -229,10 +229,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		  <div id="myModal1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		    <div class="modal-header">
 		      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-		      <h3 id="myModalLabel">Create a to-torial, its easy!</h3>
+		      <h3 id="myModalLabel">It's easy! Simply define, schedule & share.</h3>
 		      </div>
 		    <div class="modal-body modalCreate">
-		      <p class="lead">First, define your to-torial</p>
+
 
 		      <!-- Create Form  First -->
 			  <div class="row-fluid">
@@ -309,12 +309,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 
 		  <div class="row-fluid">
 		    <div class="span12">
-		      <p class="lead">Second, schedule & invite others.</p></div>
-		    Select a date and time for your to-torial.
+		    <p>Select a date and time for your to-torial.</p>
 		    </div>
 		    <!-- AddThis Button BEGIN -->
 		    <div class="row-fluid">
-		      <div class="span6 offset4">
+		      <div class="span6 offset4 actionsBtn">
 		    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 		      <a class="addthis_button_preferred_1"></a>
 		      <a class="addthis_button_preferred_2"></a>
@@ -347,11 +346,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		    <div id="myModal2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
 		      <div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-			<h3 id="myModalLabel2">Request a how-to-torial</h3>
+			<h3 id="myModalLabel2">Don't see what you're looking for?  Tell us!</h3>
 			</div>
 		      <div class="modal-body modalCreate">
-			<p>Don't see what you're looking for?  Tell us!</p>
-			 <input class="input-xlarge" type="test" placeholder="Describe it for us...">
+			<div class="span6 offset3"> 
+			<textarea rows=3 type="text" placeholder="Describe it for us..."></textarea>
+			</div>
+			<div class="span6 offset3">
+			 <input type="text" placeholder="Paste a link to the project">
+			 </div>
 		      </div>
 		      <div class="modal-footer">
 			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
@@ -382,7 +385,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 
 	  </div>
 
-	  <div class="span3 rewards">
+<!--	  <div class="span3 rewards">
 	    <div class="span12">
 	      <div class="prizes">
 		<div class="span10 offset1">
@@ -438,12 +441,33 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		    <h4>Pledge $100 or more</h4>
 		    <p>We'll name something on the site after you</p>
 		    </div>
-		  </div>
+		  </div> -->
 		
 		</div>
 	      </div>
 	   </div> 
 
+       <div class="container-fluid">
+	 <div class="span6">
+	    <div class="asset">
+            <img class="img-polaroid" src="http://placehold.it/600x200">
+            </div>
+
+            <div class="asset">
+              <img class="img-polaroid" src="http://placehold.it/600x200">
+              </div> -
+	   </div>
+	 <div class="span6">
+	  <div class="asset">
+            <img class="img-polaroid" src="http://placehold.it/600x200">
+            </div>
+
+            <div class="asset">
+              <img class="img-polaroid" src="http://placehold.it/600x200">
+              </div>   
+	 </div>
+
+	 </div>
 
 
 	<div class="row-fluid faq">
